# Tokenizer-Visualizer

./: .gitignore  README.en.md  README.md  build.py  download_tokenizers.py  generate_icon.py  pyproject.toml
.github/workflows/: build.yml
i18n/: en.json  zh.json
src/tokenizer_visualizer/: __init__.py  __main__.py  app.py  cli.py  i18n.py  main.py  utils.py  widgets.py
