[project]
name = "tokenizer-visualizer"
version = "0.1.0"
description = "A beautiful PySide6-based tokenizer behavior visualizer"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "tokenizers>=0.15",
]

[project.scripts]
tokenizer-visualizer = "tokenizer_visualizer.main:main"
tokenizer-viz = "tokenizer_visualizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenizer_visualizer"]

[dependency-groups]
dev = [
    "nuitka>=4.0.8",
    "zstandard>=0.25.0",
]
